log/build_2022-08-04_11-33-13/my_first_package/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/nippun/ros2_ws/install/my_first_package/lib/python3.10/site-packages/my_first_package/my_node.py", line 6
    print('Hello World!!)
          ^
SyntaxError: unterminated string literal (detected at line 6)

